# airflow-pytest-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  scorecard.yml  testpypi.yml
examples/: coverage_gate.py  data_mart_pipeline.py  example_dag.py  failed_only_retry.py  mapped_suites.py  parallel_and_dist.py  rerun_failed.py  retry_failed_dag_pattern.py  sharded_mapped.py
requirements/: build.in  build.txt  dev.txt
src/airflow_pytest_operator/: __init__.py  exceptions.py  models.py  provider_info.py
src/airflow_pytest_operator/compat/: __init__.py  airflow.py
src/airflow_pytest_operator/operators/: __init__.py  _constants.py  _coverage.py  _validation.py  pytest_operator.py
src/airflow_pytest_operator/reporters/: __init__.py  base.py  json_parser.py  junit_parser.py
src/airflow_pytest_operator/runners/: __init__.py  base.py  subprocess_runner.py
src/airflow_pytest_operator/stores/: __init__.py  base.py  variable_store.py
src/airflow_pytest_operator/utils/: __init__.py  node_id.py  shard.py
tests/: conftest.py  test_allure_optin.py  test_base_interfaces.py  test_compat.py  test_json_parser.py  test_junit_parser.py  test_junit_parser_hardening.py  test_models.py  test_node_id_utils.py  test_operator.py  test_packaging.py  test_provider_discovery.py  test_shard_utils.py  test_subprocess_runner.py  test_variable_store.py  test_variable_store_integration.py
tests/operator/: _op_helpers.py  test_coverage_controller.py  test_op_cache.py  test_op_collaborator_safety.py  test_op_core.py  test_op_coverage.py  test_op_dry_run.py  test_op_env.py  test_op_failed_only.py  test_op_parallel.py  test_op_rerun.py  test_op_rerun_failed_only_compose.py  test_op_selectors.py  test_op_store_injection.py  test_op_streaming.py  test_validation.py
tests/runner/: _run_helpers.py  test_run_basic.py  test_run_cwd_cleanup.py  test_run_dry_run.py  test_run_env_file.py  test_run_failures.py  test_run_lastfailed.py  test_run_lifecycle.py  test_run_logging.py  test_run_multipath.py  test_run_output_caps.py  test_run_streaming.py  test_run_target_injection.py  test_run_verbose.py
